--- a/w1/index.html
+++ b/w1/index.html
@@ -3,13 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>matbf</title>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-
 </head>
 
 <body>
-	<script src="circle_bresenham.js"></script>
+	<script src="/p5/p5.min.js"></script>
+	<!--
+		<script src="circle_pythagoras.js"></script>
+		<script src="circle_bresenham.js"></script>
+		<script src="circle_trig.js"></script>
+    -->
+	<script src="spiral.js"></script>
+	
 </body>
 
 </html>
