--- a/w3/index.html
+++ b/w3/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" href="data:,">
 	<title>matbf</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Monomaniac+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<script src="/p5/p5.min.js"></script>
 	<script src="markov.js"></script>
-	
 </body>
 
 </html>
