--- a/w1/index.html
+++ b/w1/index.html
@@ -7,6 +7,7 @@
 
 <body>
 	<script src="/p5/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 	<!--
 		<script src="circle_pythagoras.js"></script>
 		<script src="circle_bresenham.js"></script>
