--- a/w4/index.html
+++ b/w4/index.html
@@ -4,14 +4,9 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="data:,">
 	<title>matbf</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Monomaniac+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-	<script src="/p5/p5.min.js"></script>
+<body style="background-color: #0C000F;">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 	<!-- <script src="celaut1d.js"></script> -->
 	<script src="celaut2d.js"></script>
