--- a/w4/index.html
+++ b/w4/index.html
@@ -6,7 +6,7 @@
 	<title>matbf</title>
 </head>
 
-<body style="background-color: #0C000F;">
+<body style="background-color: #0C000F; overflow: hidden;">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 	<!-- <script src="celaut1d.js"></script> -->
 	<script src="celaut2d.js"></script>
