--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <a href="https://jfladas.github.io/matbf/w4/" target="_blank">
         <h2>W4 | Life</h2>
-        <p><em>interactive version of Conway's Game of Life with more states/colors <span> (click or drag to create cells)</span></em></p>
+        <p><em>interactive version of Conway's Game of Life with more states/colors <span> (click or drag to create cells, press space to switch color theme)</span></em></p>
     </a>
     
     <a href="https://jfladas.github.io/matbf/w5/" target="_blank">
