--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <h2>↳ Documentation</h2>
     </a>
 
+    <a href="https://github.com/jfladas/matbf" target="_blank">
+        <h2>↳ GitHub</h2>
+    </a>
 </body>
 
 </html>
