--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <h2>W6 | Trees</h2>
         <p><em>different trees using 2D L-systems</em></p>
     </a>
+
+    <a href="https://jfladas.github.io/matbf/exam/" target="_blank">
+        <h2>EXAM | Breathing</h2>
+        <p><em>pulsating circles for mindful breathing</em></p>
+    </a>
     
     <a href="https://jfladas.github.io/matbf/doc/matbf.pdf" target="_blank">
         <h2>↳ Documentation</h2>
