--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <a href="https://jfladas.github.io/matbf/w5/" target="_blank">
         <h2>W5 | Mountains</h2>
-        <p><em>layered mountain range made with 2D fractal noise and smoothstep interpolation <span> (click to reset with different colors)</span></em></p>
+        <p><em>layered mountain range made with 2D fractal noise and smoothstep interpolation <span> (click to reset with different colors, reload to regenerate mountains)</span></em></p>
     </a>
     
     <a href="https://jfladas.github.io/matbf/w6/" target="_blank">
