--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>matbf</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght,WONK@0,9..144,100..900,1;1,9..144,100..900,1&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -51,11 +57,11 @@
     </a>
 
     <a href="https://jfladas.github.io/matbf/doc/matbf.pdf" target="_blank">
-        <h2>↳ Documentation</h2>
+        <h2>» Documentation</h2>
     </a>
 
     <a href="https://github.com/jfladas/matbf" target="_blank">
-        <h2>↳ GitHub</h2>
+        <h2>» GitHub</h2>
     </a>
 </body>
 
